contour/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-gitops
  labels:
    app: hello-gitops
  namespace: development
spec:
  defaultBackend:
    service:
      name: development
      port:
        number: 8080
