contour/production-httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: prod-http-proxy
  namespace: production
spec:
  virtualhost:
    fqdn: prod.hello-gitops.com
  routes:
    - conditions:
      - prefix: /
      services:
        - name: hello-gitops
          port: 8080
